[package]
name = "transaction-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1" , features = ["full"] } 
itertools = "0.10.4"
clap = { version = "3.2.22", features = ["derive"] }
futures = "0.3"
rust_decimal = { version = "1.26.1", features = ["serde-with-str", "serde-with-float"]}
rust_decimal_macros = "1.26"
serde_test = "1.0"
